<resources>
    <string name="app_name">Pembukuan Priadi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">Fikri Fahru Roji</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_transaction">Transaction</string>
    <string name="tx_income">Income</string>
    <string name="tx_outcome">Outcome</string>
    <string name="tx_balance">Balance</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="error_desc">Description or Amount can\'t be empty</string>
    <string name="exit_app">Exit Application?</string>
    <string name="synchronize">Synchronize</string>
    <string name="tx_descriptions">Descriptions</string>
    <string name="tx_amount">Amount</string>
</resources>
